# mammut-fuse

./: .gitignore  CMakeLists.txt  Makefile  anon_share_mammutfs.py  config.h.in  config.mk  fuse.anon.map  lister_example.json  mammutfs-automount.py  mammutfs.c  mammutfs.cfg  mammutfs.cfg.example  mammutfs_annon.cfg  mammutfs_local.cfg  readme.md  run-tests.py  run-tests.sh
cmake/: Findfuse.cmake
doc/: main.tex
doc/auto/: main.el
libs/: optionsparser.h
mammutfsd/: __init__.py  __main__.py  libconf.py  libmammutfs.py  mammutfsd.conf  mammutfsd.py  mammutfsd_help.py  mammutfsd_mammutfs.py  mammutfsd_redis.py  requirements.txt
sbin/: mount.fuse.mammutfs
src/: CMakeLists.txt  communicator.cpp  communicator.h  config.h.in  filemodule.h  main.cpp  mammut_config.cpp  mammut_config.h  mammut_fuse.cpp  mammut_fuse.h  mammutfs.cfg  module.cpp  module.h  options.cpp  options.h  resolver.h  thread_queue.h  unix_socket_test.py
src/libs/: optionsparser.h
src/module/: CMakeLists.txt  anonymous.h  authkeys.h  backup.h  default.h  fullbackuplist.h  lister.h  private.h  public.h  usercontrol.h
systemd/: mammut-fuse-public.service  mammutfs-backup-anonmap.service  mammutfs-backup-anonmap.timer  mammutfs-backup.service  mammutfs-home@.service  mammutfs-management.service  mammutfs-public.service  mammutfs-update-anonmap.service  mammutfs-update-anonmap.timer  user-slice-mammutfs.conf
systemd/user@.service.d/: mammutfs-home.conf
test/: create-file-structure.sh
tools/: anonmap_convert.py  create_testdir.py  mammutfs-backup-wrapper.py  mammutfs-user-wrapper.py  mammutfs_maanger.py  mammutfs_manager.py  mammutfsctl  scan_public_list.py  socket_connect.py  tmp  unix_socket_test.py  update_anonmap_raidmove.py
